<resources>
    <string name="app_name">Footprint</string>
    <string name="action_settings">Settings</string>
    <string name="get_speed_and_orientation">Get speed and orientation</string>
    <string name="velocity">Velocity</string>
    <string name="angular">Angular</string>
    <string name="location">Location</string>
    <string name="acceleration">Acceleration</string>
    <string name="angular_velocity">Angular velocity</string>
    <string name="centrifugal">Centrifugal</string>
    <string name="id">Id</string>
    <string name="time">Time</string>
    <string name="analysis">Analysis</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
</resources>
