<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fanhl.footprint.ui.RecordActivity">

    <ToggleButton
        android:id="@+id/record_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/start_record"
        android:textOn="@string/stop_record"/>

    <TextView
        android:id="@+id/id_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/location_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/velocity_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/velocity"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/angular_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angular"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/acceleration_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceleration"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/angular_velocity_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angular_velocity"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/centrifugal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/centrifugal"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
</LinearLayout>
